--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -31,7 +31,7 @@
     flex-direction: column;
     gap: 1rem;
 }
-.child-section input:not([type="submit"], [type="checkbox"]), textarea{
+.child-section input:not([type="submit"], [type="radio"]), textarea{
     padding: 2rem;
     color: var(--negro);
     background-color: var(--blanco);
